changed the stlyings of the hamburger menu's list items to a fixed positioning. This will help formatting issues on mobile browsers.

--- a/wireframe.css
+++ b/wireframe.css
@@ -105,14 +105,15 @@ nav>ul a:active {
 		text-shadow: -.05em -.05em .05em #000000;
 	}
 	
-nav>ul li:active {
-	transform: scale(1.3) translate(.3em, -.2em);
-}
+	nav>ul li:active {
+		transform: scale(1.3) translate(.3em, -.2em);
+	}
 	
-	nav>ul li:first-child {margin-left: 0;}
-	nav>ul li:nth-child(2) {margin-left: -.8em;}
-	nav>ul li:nth-child(3) {margin-left: -1em;}
-	nav>ul li:nth-child(4) {margin-left: .7em;}
+	nav>ul li {position: fixed;}
+	nav>ul li:first-child {top: 0; right: 5em;}
+	nav>ul li:nth-child(2) {top: 2.4em; right: 5.7em;}
+	nav>ul li:nth-child(3) {top: 4.8em; right: 4.5em;}
+	nav>ul li:nth-child(4) {top: 7.2em; right: 2em;}
 	
 	nav {
 		position: relative;
